[package]
name = "apexdz-launcher"
version = "0.1.0"
description = "ApexDZ - Ultra-fast DayZ Linux Launcher & Mod Manager"
authors = ["Ayoze"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
walkdir = "2.5"
dirs = "5.0"
byteorder = "1.5"
