[package]
name = "balota"
version = "0.2.0"
description = "Balota - navegador de servidores y gestor de mods de DayZ para Linux"
authors = ["Ayoze Torres"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
] }
base64 = "0.22"
walkdir = "2"
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
